# barmaid

./: .gitignore  README.md  pyproject.toml
barmaid/: cli.py
scripts/: convert_image.py
tests/: test_cli.py
