[project]
name = "barmaid"
version = "0.0.2"
description = "Convert Alembic migration history to Mermaid diagrams"
readme = "README.md"
authors = [{name = "Bruno Peixoto", email = "brunolnetto@gmail.com"}]
requires-python = ">=3.10"
dependencies = []
keywords = ["alembic", "mermaid", "database", "migrations", "visualization", "diagram"]

[project.urls]
Homepage = "https://github.com/brunolnetto/barmaid"
Repository = "https://github.com/brunolnetto/barmaid"
Issues = "https://github.com/brunolnetto/barmaid/issues"

[project.scripts]
barmaid = "barmaid.cli:main"

[tool.setuptools]
packages = ["barmaid"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
